; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_wrp_alu64_imm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_wrp_alu64_imm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_prog = type { i32 }
%struct.nfp_insn_meta = type { i32, %struct.bpf_insn }
%struct.bpf_insn = type { i32, i32 }

@FLAG_INSN_SKIP_NOOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfp_prog*, %struct.nfp_insn_meta*, i32, i32)* @wrp_alu64_imm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wrp_alu64_imm(%struct.nfp_prog* %0, %struct.nfp_insn_meta* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.nfp_prog*, align 8
  %7 = alloca %struct.nfp_insn_meta*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.bpf_insn*, align 8
  %11 = alloca i32, align 4
  store %struct.nfp_prog* %0, %struct.nfp_prog** %6, align 8
  store %struct.nfp_insn_meta* %1, %struct.nfp_insn_meta** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load %struct.nfp_insn_meta*, %struct.nfp_insn_meta** %7, align 8
  %13 = getelementptr inbounds %struct.nfp_insn_meta, %struct.nfp_insn_meta* %12, i32 0, i32 1
  store %struct.bpf_insn* %13, %struct.bpf_insn** %10, align 8
  %14 = load %struct.bpf_insn*, %struct.bpf_insn** %10, align 8
  %15 = getelementptr inbounds %struct.bpf_insn, %struct.bpf_insn* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %4
  %20 = load i32, i32* @FLAG_INSN_SKIP_NOOP, align 4
  %21 = load %struct.nfp_insn_meta*, %struct.nfp_insn_meta** %7, align 8
  %22 = getelementptr inbounds %struct.nfp_insn_meta, %struct.nfp_insn_meta* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %20
  store i32 %24, i32* %22, align 4
  store i32 0, i32* %5, align 4
  br label %44

25:                                               ; preds = %4
  %26 = load %struct.nfp_prog*, %struct.nfp_prog** %6, align 8
  %27 = load %struct.bpf_insn*, %struct.bpf_insn** %10, align 8
  %28 = getelementptr inbounds %struct.bpf_insn, %struct.bpf_insn* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = mul nsw i32 %29, 2
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* %11, align 4
  %33 = call i32 @wrp_alu_imm(%struct.nfp_prog* %26, i32 %30, i32 %31, i32 %32)
  %34 = load %struct.nfp_prog*, %struct.nfp_prog** %6, align 8
  %35 = load %struct.bpf_insn*, %struct.bpf_insn** %10, align 8
  %36 = getelementptr inbounds %struct.bpf_insn, %struct.bpf_insn* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = mul nsw i32 %37, 2
  %39 = add nsw i32 %38, 1
  %40 = load i32, i32* %8, align 4
  %41 = load i32, i32* %11, align 4
  %42 = lshr i32 %41, 32
  %43 = call i32 @wrp_alu_imm(%struct.nfp_prog* %34, i32 %39, i32 %40, i32 %42)
  store i32 0, i32* %5, align 4
  br label %44

44:                                               ; preds = %25, %19
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

declare dso_local i32 @wrp_alu_imm(%struct.nfp_prog*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
